2003-10-19  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGBitmap.m: Cache color lookup to reduce use
	of XQueryColor (based on code from Marko Riedel).

	* configure.ac: Add 2.57 prereq

2003-10-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Don't look for jpeg/tiff (already linked in by gui).

2003-10-08 15:58  Alexander Malmberg <alexander@malmberg.org>

	* Source/xlib/XGContext.m (+initializeBackend): Give NSLog an
	objective-c string (@""), not a c string (""). Reported by Matt
	Rice.

2003-10-05  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile: Make Back documentation
	* Documentation/Back/GNUmakefile: Set DocumentationDirectory.

	* Source/x11/raster.c (RMakeCenteredImage): Remove (unused).

2003-10-04 14:27  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/path.m (-DPSrectclip::::): Move the call to -DPSnewpath
	so it gets called on all paths through the method.

2003-10-03  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Use -Wl for netbsd linker options.

2003-10-02  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGGState.m (-DPSrectclip::::): Clear path.
	* Source/winlib/WIN32GState.m (-DPSrectclip::::): Idem.
	* Source/art/path.m (-DPSrectclip::::): Idem.

2003-09-30  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSGState.m ([GSGState -DPSrectclip::::]): Clear
	the current path after clipping.

2003-09-29  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.0

2003-09-22 13:03  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/image.m (-_image_do_rgb_transform:::): Check if the
	coordinates involved are too large to handle normally. If they
	are, scale down the numbers a bit (gives less accuracy, but no
	overflow).

2003-09-20  Adam Fedor  <fedor@gnu.org>

	* Headers/xlib/XGGState.h: Add GSReadRect def.
	* Headers/xlib/XGPrivate.h: Add _pixmap_read_alpha def.
	* Source/xlib/XGBitmap.m (_pixmap_read_alpha): Implement.
	* Source/xlib/XGGstate.m (-GSReadRect:): Idem.

2003-09-15  Adam Fedor  <fedor@gnu.org>
